--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -36,3 +36,182 @@ q:before, q:after {
 table {
   border-collapse: collapse;
   border-spacing: 0; }
+
+.r {
+  clear: both; }
+  .r::after {
+    clear: both;
+    content: "";
+    display: table; }
+  .r:first-of-type {
+    margin-top: 0.5em; }
+  .r:last-of-type {
+    margin-bottom: 0.5em; }
+  .r .g-12 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((12/12) * (100% - (2 * 40px) - (((12 / 12) - 1) * 20px)));
+    width: calc((12/12) * (100% - (2 * 40px) - (((12 / 12) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-12:first-child {
+      margin-left: 40px; }
+    .r .g-12:last-child {
+      margin-right: 40px; }
+  .r .g-11 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((11/12) * (100% - (2 * 40px) - (((12 / 11) - 1) * 20px)));
+    width: calc((11/12) * (100% - (2 * 40px) - (((12 / 11) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-11:first-child {
+      margin-left: 40px; }
+    .r .g-11:last-child {
+      margin-right: 40px; }
+  .r .g-10 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((10/12) * (100% - (2 * 40px) - (((12 / 10) - 1) * 20px)));
+    width: calc((10/12) * (100% - (2 * 40px) - (((12 / 10) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-10:first-child {
+      margin-left: 40px; }
+    .r .g-10:last-child {
+      margin-right: 40px; }
+  .r .g-9 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((9/12) * (100% - (2 * 40px) - (((12 / 9) - 1) * 20px)));
+    width: calc((9/12) * (100% - (2 * 40px) - (((12 / 9) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-9:first-child {
+      margin-left: 40px; }
+    .r .g-9:last-child {
+      margin-right: 40px; }
+  .r .g-8 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((8/12) * (100% - (2 * 40px) - (((12 / 8) - 1) * 20px)));
+    width: calc((8/12) * (100% - (2 * 40px) - (((12 / 8) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-8:first-child {
+      margin-left: 40px; }
+    .r .g-8:last-child {
+      margin-right: 40px; }
+  .r .g-7 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((7/12) * (100% - (2 * 40px) - (((12 / 7) - 1) * 20px)));
+    width: calc((7/12) * (100% - (2 * 40px) - (((12 / 7) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-7:first-child {
+      margin-left: 40px; }
+    .r .g-7:last-child {
+      margin-right: 40px; }
+  .r .g-6 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((6/12) * (100% - (2 * 40px) - (((12 / 6) - 1) * 20px)));
+    width: calc((6/12) * (100% - (2 * 40px) - (((12 / 6) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-6:first-child {
+      margin-left: 40px; }
+    .r .g-6:last-child {
+      margin-right: 40px; }
+  .r .g-5 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((5/12) * (100% - (2 * 40px) - (((12 / 5) - 1) * 20px)));
+    width: calc((5/12) * (100% - (2 * 40px) - (((12 / 5) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-5:first-child {
+      margin-left: 40px; }
+    .r .g-5:last-child {
+      margin-right: 40px; }
+  .r .g-4 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((4/12) * (100% - (2 * 40px) - (((12 / 4) - 1) * 20px)));
+    width: calc((4/12) * (100% - (2 * 40px) - (((12 / 4) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-4:first-child {
+      margin-left: 40px; }
+    .r .g-4:last-child {
+      margin-right: 40px; }
+  .r .g-3 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((3/12) * (100% - (2 * 40px) - (((12 / 3) - 1) * 20px)));
+    width: calc((3/12) * (100% - (2 * 40px) - (((12 / 3) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-3:first-child {
+      margin-left: 40px; }
+    .r .g-3:last-child {
+      margin-right: 40px; }
+  .r .g-2 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((2/12) * (100% - (2 * 40px) - (((12 / 2) - 1) * 20px)));
+    width: calc((2/12) * (100% - (2 * 40px) - (((12 / 2) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-2:first-child {
+      margin-left: 40px; }
+    .r .g-2:last-child {
+      margin-right: 40px; }
+  .r .g-1 {
+    border: 1px solid;
+    float: left;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
+    min-height: 50px;
+    width: -webkit-calc((1/12) * (100% - (2 * 40px) - (((12 / 1) - 1) * 20px)));
+    width: calc((1/12) * (100% - (2 * 40px) - (((12 / 1) - 1) * 20px)));
+    margin-right: 10px;
+    margin-left: 10px; }
+    .r .g-1:first-child {
+      margin-left: 40px; }
+    .r .g-1:last-child {
+      margin-right: 40px; }
