--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -37,22 +37,62 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+body {
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 16px;
+  line-height: 1.5; }
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: Helvetica, Arial, sans-serif;
+  font-style: normal;
+  font-variant: normal;
+  font-weight: bold; }
+
+h1 {
+  font-size: 4rem; }
+
+h2 {
+  font-size: 3rem;
+  margin-bottom: 0.3rem;
+  margin-top: 1.2rem; }
+
+h3 {
+  font-size: 2rem;
+  margin-bottom: 0.75rem;
+  margin-top: 2.25rem; }
+
+h4 {
+  font-size: 1.5rem;
+  line-height: 2;
+  margin-bottom: 0.6rem;
+  margin-top: 2.4rem; }
+
+h5 {
+  font-size: 1.25rem;
+  line-height: 1.6;
+  margin-bottom: 1rem;
+  margin-top: 3rem; }
+
+h6 {
+  font-size: 1rem;
+  margin-bottom: 1.1rem;
+  margin-top: 3.4rem; }
+
+p {
+  font-size: 1rem;
+  margin-bottom: 1.1rem;
+  margin-top: 3.4rem; }
+
 .r {
   clear: both; }
   .r::after {
     clear: both;
     content: "";
     display: table; }
-  .r:first-of-type {
-    margin-top: 0.5em; }
-  .r:last-of-type {
-    margin-bottom: 0.5em; }
   .r .g-12 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((12/12) * (100% - (2 * 40px) - (((12 / 12) - 1) * 20px)));
     width: calc((12/12) * (100% - (2 * 40px) - (((12 / 12) - 1) * 20px)));
     margin-right: 10px;
@@ -62,11 +102,9 @@ table {
     .r .g-12:last-child {
       margin-right: 40px; }
   .r .g-11 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((11/12) * (100% - (2 * 40px) - (((12 / 11) - 1) * 20px)));
     width: calc((11/12) * (100% - (2 * 40px) - (((12 / 11) - 1) * 20px)));
     margin-right: 10px;
@@ -76,11 +114,9 @@ table {
     .r .g-11:last-child {
       margin-right: 40px; }
   .r .g-10 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((10/12) * (100% - (2 * 40px) - (((12 / 10) - 1) * 20px)));
     width: calc((10/12) * (100% - (2 * 40px) - (((12 / 10) - 1) * 20px)));
     margin-right: 10px;
@@ -90,11 +126,9 @@ table {
     .r .g-10:last-child {
       margin-right: 40px; }
   .r .g-9 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((9/12) * (100% - (2 * 40px) - (((12 / 9) - 1) * 20px)));
     width: calc((9/12) * (100% - (2 * 40px) - (((12 / 9) - 1) * 20px)));
     margin-right: 10px;
@@ -104,11 +138,9 @@ table {
     .r .g-9:last-child {
       margin-right: 40px; }
   .r .g-8 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((8/12) * (100% - (2 * 40px) - (((12 / 8) - 1) * 20px)));
     width: calc((8/12) * (100% - (2 * 40px) - (((12 / 8) - 1) * 20px)));
     margin-right: 10px;
@@ -118,11 +150,9 @@ table {
     .r .g-8:last-child {
       margin-right: 40px; }
   .r .g-7 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((7/12) * (100% - (2 * 40px) - (((12 / 7) - 1) * 20px)));
     width: calc((7/12) * (100% - (2 * 40px) - (((12 / 7) - 1) * 20px)));
     margin-right: 10px;
@@ -132,11 +162,9 @@ table {
     .r .g-7:last-child {
       margin-right: 40px; }
   .r .g-6 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((6/12) * (100% - (2 * 40px) - (((12 / 6) - 1) * 20px)));
     width: calc((6/12) * (100% - (2 * 40px) - (((12 / 6) - 1) * 20px)));
     margin-right: 10px;
@@ -146,11 +174,9 @@ table {
     .r .g-6:last-child {
       margin-right: 40px; }
   .r .g-5 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((5/12) * (100% - (2 * 40px) - (((12 / 5) - 1) * 20px)));
     width: calc((5/12) * (100% - (2 * 40px) - (((12 / 5) - 1) * 20px)));
     margin-right: 10px;
@@ -160,11 +186,9 @@ table {
     .r .g-5:last-child {
       margin-right: 40px; }
   .r .g-4 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((4/12) * (100% - (2 * 40px) - (((12 / 4) - 1) * 20px)));
     width: calc((4/12) * (100% - (2 * 40px) - (((12 / 4) - 1) * 20px)));
     margin-right: 10px;
@@ -174,11 +198,9 @@ table {
     .r .g-4:last-child {
       margin-right: 40px; }
   .r .g-3 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((3/12) * (100% - (2 * 40px) - (((12 / 3) - 1) * 20px)));
     width: calc((3/12) * (100% - (2 * 40px) - (((12 / 3) - 1) * 20px)));
     margin-right: 10px;
@@ -188,11 +210,9 @@ table {
     .r .g-3:last-child {
       margin-right: 40px; }
   .r .g-2 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((2/12) * (100% - (2 * 40px) - (((12 / 2) - 1) * 20px)));
     width: calc((2/12) * (100% - (2 * 40px) - (((12 / 2) - 1) * 20px)));
     margin-right: 10px;
@@ -202,11 +222,9 @@ table {
     .r .g-2:last-child {
       margin-right: 40px; }
   .r .g-1 {
-    border: 1px solid;
     float: left;
-    margin-bottom: 0.5em;
-    margin-top: 0.5em;
-    min-height: 50px;
+    min-height: 1px;
+    overflow: hidden;
     width: -webkit-calc((1/12) * (100% - (2 * 40px) - (((12 / 1) - 1) * 20px)));
     width: calc((1/12) * (100% - (2 * 40px) - (((12 / 1) - 1) * 20px)));
     margin-right: 10px;
